--- a/Dockerfile_apache
+++ b/Dockerfile_apache
@@ -1,13 +1,13 @@
-# Use a imagem oficial do PHP com FPM
+# Use the official PHP image with FPM
 FROM php:8.2.0-fpm
 
-# Copiar composer.json para o container
+# Copy composer.json to the container
 COPY composer.json /var/www/
 
-# Definir o diretório de trabalho
+# Set the working directory
 WORKDIR /var/www/
 
-# Instalar dependências do sistema
+# Install system dependencies
 RUN apt-get update && apt-get install -y \
     build-essential \
     libpng-dev \
@@ -27,21 +27,17 @@ RUN apt-get update && apt-get install -y \
     zlib1g-dev \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
-# Instalar extensões do PHP
+# Install PHP extensions
 RUN docker-php-ext-configure gd --with-freetype --with-jpeg && \
     docker-php-ext-install pdo_mysql zip exif pcntl gd
 
-# Instalar Composer
+# Install Composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
-# Instalar FrankenPHP
-RUN curl -sSL https://github.com/dunglas/frankenphp/releases/latest/download/frankenphp-linux-x86_64 -o /usr/local/bin/frankenphp \
-    && chmod +x /usr/local/bin/frankenphp
-
-# Adicionar usuário para a aplicação
+# Add user for the application
 RUN groupadd -g 1000 www && useradd -u 1000 -ms /bin/bash -g www www
 
-# Copiar arquivos da aplicação e definir permissões
+# Copy application files and set permissions
 COPY --chown=www:www . /var/www
 
 RUN chown -R www:www /var/www/storage/app/public
@@ -51,9 +47,9 @@ RUN chmod -R 777 /var/www/storage/logs/laravel.log
 RUN chmod -R 777 /var/www/storage/framework/sessions/
 RUN chmod -R 777 /var/www/storage/framework/views/
 
-# Mudar para o usuário www
+# Change the current user to www
 USER www
 
-# Expor a porta e iniciar o FranklinPHP
+# Expose the port and start the PHP built-in server
 EXPOSE 8000
-CMD ["/usr/local/bin/frankenphp", "php-server", "--listen", "0.0.0.0:8000", "--root", "/var/www/public"]
+CMD ["php", "artisan", "serve", "--host=0.0.0.0", "--port=8000"]
